...
        <variable
            name="viewModel"
            type="com.example.movieviews.presentation.ui.activity.detailmovie.viewmodel.DetailMovieActivityViewModelImpl" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/coordinator_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".presentation.ui.activity.detailmovie.DetailMovieActivity">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
...
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_collapseMode="parallax">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/iv_poster_image"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/space_heavy_medium"
                        android:contentDescription="@string/contentDescriptionImage"
                        android:scaleType="centerCrop"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
...
                        app:cardCornerRadius="@dimen/radius_medium_small"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <androidx.appcompat.widget.AppCompatImageView
                            android:id="@+id/iv_poster_movie"
                            android:layout_width="@dimen/space_super_big_medium"
                            android:layout_height="@dimen/space_heavy_xMedium"
                            android:adjustViewBounds="true"
                            android:scaleType="centerCrop"
                            tools:srcCompat="@drawable/sample_poster" />

...
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cl_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_title_movie"
                    style="@style/TextViewBold_Dark"
                    android:layout_marginTop="@dimen/space_super_small"
                    android:textAlignment="center"
                    android:textSize="@dimen/space_text_super_medium"
                    app:layout_constraintEnd_toEndOf="@+id/tv_desc_overview"
                    app:layout_constraintStart_toStartOf="@+id/tv_tagline"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="The Walking Dead (2010)" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_score_film"
                    style="@style/TextViewRegular"
                    android:layout_marginTop="@dimen/space_medium_large"
                    android:textSize="@dimen/space_text_large_medium"
                    app:layout_constraintEnd_toEndOf="@+id/tv_title_movie"
                    app:layout_constraintStart_toStartOf="@+id/tv_title_movie"
                    app:layout_constraintTop_toBottomOf="@+id/tv_title_movie"
                    tools:text="User Score : 8.1" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_movie_certification"
                    style="@style/TextViewBold_Dark"
                    android:layout_marginTop="@dimen/space_medium"
                    android:textSize="@dimen/space_text_large_medium"
                    app:layout_constraintEnd_toEndOf="@+id/tv_score_film"
                    app:layout_constraintStart_toStartOf="@+id/tv_score_film"
                    app:layout_constraintTop_toBottomOf="@+id/tv_score_film"
...
