<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.example.movieviews.presentation.ui.fragment.home.viewmodel.HomeFragmentViewModelImpl" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/coordinator_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".presentation.ui.fragment.home.HomeFragment">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:fitsSystemWindows="true">

            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_scrollFlags="scroll">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_collapseMode="parallax">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/iv_poster_home"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/space_heavy"
                        android:contentDescription="@string/contentDescriptionImage"
                        android:scaleType="centerCrop"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:srcCompat="@drawable/banner" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tv_title"
                        style="@style/TextViewBold"
                        android:layout_marginStart="@dimen/space_text_super_small"
                        android:text="@string/welcome"
                        android:textSize="@dimen/space_text_super_medium"
                        app:layout_constraintBottom_toBottomOf="@+id/iv_poster_home"
                        app:layout_constraintEnd_toEndOf="@+id/iv_poster_home"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="@+id/iv_poster_home"
                        app:layout_constraintTop_toTopOf="@+id/iv_poster_home"
                        app:layout_constraintVertical_bias="0.58" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tv_desc"
                        style="@style/TextViewBold"
                        android:text="@string/description_title"
                        android:textSize="@dimen/space_text_large_medium"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="@+id/tv_title"
                        app:layout_constraintTop_toBottomOf="@+id/tv_title" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </com.google.android.material.appbar.CollapsingToolbarLayout>

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
            android:id="@+id/swipeRefresh"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

            <androidx.core.widget.NestedScrollView
                android:id="@+id/nestedScroll"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/layout_content"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tv_popular"
                        style="@style/TextViewBold_Dark"
                        android:layout_marginStart="@dimen/space_super_small"
                        android:layout_marginTop="@dimen/space_big_medium"
                        android:text="@string/popular"
                        android:textSize="@dimen/space_text_super_small"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tv_see_all_popular"
                        style="@style/TextViewBold_Dark"
                        android:layout_marginTop="@dimen/space_big_medium"
                        android:layout_marginEnd="@dimen/space_super_small"
                        android:text="@string/see_all"
                        android:textSize="@dimen/space_text_super_small"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintLeft_toRightOf="@+id/tv_popular"
                        app:layout_constraintTop_toTopOf="parent" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rv_popular_movie"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:clipToPadding="false"
                        android:nestedScrollingEnabled="false"
                        android:orientation="horizontal"
                        android:padding="@dimen/space_medium_large"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/tv_popular"
                        tools:itemCount="4"
                        tools:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tv_top_rated_movie"
                        style="@style/TextViewBold_Dark"
                        android:layout_marginStart="@dimen/space_super_small"
                        android:layout_marginTop="@dimen/space_medium"
                        android:text="@string/top_rated_movie"
                        android:textSize="@dimen/space_text_super_small"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/rv_popular_movie" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tv_see_all_top_rated_movie"
                        style="@style/TextViewBold_Dark"
                        android:layout_marginTop="@dimen/space_medium"
                        android:layout_marginEnd="@dimen/space_super_small"
                        android:text="@string/see_all"
                        android:textSize="@dimen/space_text_super_small"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintLeft_toRightOf="@+id/tv_top_rated_movie"
                        app:layout_constraintTop_toBottomOf="@+id/rv_popular_movie" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rv_top_rated_movie"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:clipToPadding="false"
                        android:nestedScrollingEnabled="false"
                        android:orientation="horizontal"
                        android:padding="@dimen/space_medium_large"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/tv_top_rated_movie" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tv_trending_movie"
                        style="@style/TextViewBold_Dark"
                        android:layout_marginStart="@dimen/space_super_small"
                        android:layout_marginTop="@dimen/space_medium"
                        android:text="@string/trending_movie"
                        android:textSize="@dimen/space_text_super_small"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/rv_top_rated_movie" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tv_see_all_trending"
                        style="@style/TextViewBold_Dark"
                        android:layout_marginTop="@dimen/space_medium"
                        android:layout_marginEnd="@dimen/space_super_small"
                        android:text="@string/see_all"
                        android:textSize="@dimen/space_text_super_small"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintLeft_toRightOf="@+id/tv_trending_movie"
                        app:layout_constraintTop_toBottomOf="@+id/rv_top_rated_movie" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rv_trending_movie"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:clipToPadding="false"
                        android:nestedScrollingEnabled="false"
                        android:orientation="horizontal"
                        android:padding="@dimen/space_medium_large"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/tv_trending_movie" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tv_upcoming_movie"
                        style="@style/TextViewBold_Dark"
                        android:layout_marginStart="@dimen/space_super_small"
                        android:layout_marginTop="@dimen/space_medium"
                        android:text="@string/up_coming_movies"
                        android:textSize="@dimen/space_text_super_small"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/rv_trending_movie" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tv_see_all_upcoming_movie"
                        style="@style/TextViewBold_Dark"
                        android:layout_marginTop="@dimen/space_medium"
                        android:layout_marginEnd="@dimen/space_super_small"
                        android:text="@string/see_all"
                        android:textSize="@dimen/space_text_super_small"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintLeft_toRightOf="@+id/tv_upcoming_movie"
                        app:layout_constraintTop_toBottomOf="@+id/rv_trending_movie" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rv_upcoming_movie"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:clipToPadding="false"
                        android:nestedScrollingEnabled="false"
                        android:orientation="horizontal"
                        android:padding="@dimen/space_medium_large"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/tv_upcoming_movie" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.core.widget.NestedScrollView>

        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>