...
    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home"
        android:title="@string/home" />

    <item
        android:id="@+id/navigation_movie"
        android:icon="@drawable/ic_movie"
        android:title="@string/movie"/>

    <item
        android:id="@+id/navigation_tv_show"
        android:icon="@drawable/ic_tv_show"
        android:title="@string/tvShow"/>
</menu>
