...
            <androidx.core.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clipToPadding="false">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_movie"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:nestedScrollingEnabled="false"
                    android:orientation="vertical"
                    android:padding="@dimen/space_large"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>
...
