...
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".presentation.ui.fragment.tvshow.TvShowFragment">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_tv_show"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clipToPadding="false"
                android:padding="@dimen/space_medium_large"
                tools:itemCount="5"
                tools:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
...
